Blender Crash when Painting Through Texture Paint Window #62236

Closed
opened 2019-03-06 03:11:48 +01:00 by Henry Frantz · 5 comments

System Information
Operating system: Windows 10
Graphics card: GTX 970 TI
16 GB of Ram

Blender Version
Broken: 2.80, 1df6a98b17, blender2.7, 2019-03-05 00:32

Short description of error
I can make a UV map then move to the "Texture Paint" window to edit. I select the material and open it through both windows. I then try to paint on the right "Texture Paint" window frame (not the "Paint" window) and after drawing a very short amount, Blender completly freezes and Windows gives the "Blender is not responding" message. Sometimes my whole PC will freeze after this point.

Exact steps for others to reproduce the error

  1. Open StoneFoundation.blend window{F6769170}
  2. Click the "Material Base Color" in the texture slots window
  3. Click on the 3D model in the "Texture Paint"
**System Information** Operating system: Windows 10 Graphics card: GTX 970 TI 16 GB of Ram **Blender Version** Broken: 2.80, 1df6a98b176f, blender2.7, 2019-03-05 00:32 **Short description of error** I can make a UV map then move to the "Texture Paint" window to edit. I select the material and open it through both windows. I then try to paint on the right "Texture Paint" window frame (not the "Paint" window) and after drawing a very short amount, Blender completly freezes and Windows gives the "Blender is not responding" message. Sometimes my whole PC will freeze after this point. **Exact steps for others to reproduce the error** 1. Open StoneFoundation.blend window{[F6769170](https://archive.blender.org/developer/F6769170/StoneFoundation.blend)} 2. Click the "Material Base Color" in the texture slots window 3. Click on the 3D model in the "Texture Paint"
Author

Added subscriber: @hfrantz915

Added subscriber: @hfrantz915

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Luca Rood was assigned by Campbell Barton 2019-03-06 06:05:54 +01:00

Caused by 10d9a2494f, added back clamping.

Looking into this exposed another bug: see #62240

Caused by 10d9a2494f, added back clamping. Looking into this exposed another bug: see #62240

This issue was referenced by 0294e1d27f

This issue was referenced by 0294e1d27f2f64e88ab980f5fafa3d3e0743877c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62236
No description provided.