Fix T62236: Crash texture painting

Caused by 10d9a2494fc5e which removed 5x length clamping.